[package]
name = "tree-sitter-nelt"
description = "tree-sitter parser for the nelt templating language"
version = "0.1.0"
authors = ["Leonard Mafeni <komemafeni944@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nelt"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kmafeni04/tree-sitter-nelt"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
